--- a/sass/index.scss
+++ b/sass/index.scss
@@ -108,7 +108,7 @@ header {
   nav {
     display: flex;
     align-items: center;
-    gap: 40px;
+    gap: 100px;
     .logo {
       a {
         display: flex;
@@ -136,6 +136,14 @@ header {
         font-weight: 400;
         line-height: 150%; /* 24px */
         gap: 14px;
+        &:hover {
+          background-color: transparent;
+          color: #414141;
+          transition: 0.3s;
+          svg path {
+            fill: #414141;
+          }
+        }
       }
       label {
         display: flex;
@@ -148,7 +156,7 @@ header {
           border: none;
           padding: 8px;
           outline: none;
-          padding-right: 60px;
+          padding-right: 180px;
         }
         svg {
           padding-right: 10px;
@@ -169,7 +177,7 @@ header {
           text-align: center;
 
           /* Desc/Text/XS */
-          font-family: Rubik;
+          font-family: Rubik-400;
           font-size: 12px;
           font-style: normal;
           font-weight: 400;
@@ -180,12 +188,23 @@ header {
         display: flex;
         align-items: center;
         gap: 10px;
+        p {
+          color: var(--onSurface, #232323);
+
+          /* Desc/Text/S */
+          font-family: Rubik-400;
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 150%; /* 24px */
+        }
       }
     }
   }
 }
 
 .hero {
+  margin-top: 70px;
   background-image: url(../assets/images/Group\ 7100.png);
   .hero-content {
     display: flex;
@@ -201,6 +220,182 @@ header {
       font-style: normal;
       font-weight: 700;
       line-height: 150%; /* 72px */
+    }
+  }
+}
+
+.aksiya {
+  padding-top: 80px;
+  .aksiya-content {
+    .aksiya-title {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      h1 {
+        color: var(--main-on-surface, #414141);
+
+        /* Desc/Header/M */
+        font-family: Rubik-400;
+        font-size: 36px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 150%; /* 54px */
+      }
+      p {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        color: var(--grayscale-hardest, #606060);
+        text-align: center;
+        cursor: pointer;
+
+        /* Desc/Text/S */
+        font-family: Rubik-400;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 150%; /* 24px */
+        &:hover {
+          color: #414141;
+        }
+      }
+    }
+    .cards {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      padding-top: 40px;
+      .card {
+        max-width: 272px;
+        border-radius: 4px;
+        background: #fff;
+        box-shadow: 1px 2px 4px 0px rgba(0, 0, 0, 0.1);
+        &:hover {
+          transition: 0.3s;
+          box-shadow: 4px 8px 16px 0px rgba(255, 102, 51, 0.2);
+        }
+        .card-img {
+          background: url(../assets/images/card-1.png),
+            lightgray 50% / cover no-repeat;
+          width: 272px;
+          height: 160px;
+          flex-shrink: 0;
+          svg {
+            margin: 10px 10px 0px 220px;
+            width: 40px;
+            height: 40px;
+            padding: 4px;
+            border-radius: 4px;
+            opacity: 0.5;
+            background: #f3f2f1;
+            &:hover {
+              padding: 0;
+              opacity: 1;
+              background-color: red;
+              transition: 0.3s;
+              path {
+                fill: #000;
+              }
+            }
+          }
+          p {
+            display: inline-flex;
+            color: #fff;
+            font-family: Rubik-400;
+            font-size: 16px;
+            border-radius: 4px;
+            background: #f63;
+            padding: 4px 8px;
+            margin: 60px 0px 10px 10px;
+          }
+        }
+        .card-texts {
+          display: flex;
+          padding: 8px;
+          flex-direction: column;
+          align-items: center;
+          gap: 8px;
+          .price {
+            display: flex;
+            justify-content: space-between;
+            gap: 100px;
+            .price1 {
+              h2 {
+                color: #414141;
+                font-family: Rubik-400;
+                font-size: 18px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: 150%; /* 27px */
+              }
+              p {
+                color: var(--grayscale-light, #bfbfbf);
+
+                /* Desc/Text/XS */
+                font-family: Rubik-400;
+                font-size: 12px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 150%; /* 18px */
+              }
+            }
+            .price2 {
+              h2 {
+                color: var(--grayscale-hardest, #606060);
+                font-family: Rubik-400;
+                font-size: 16px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 150%; /* 24px */
+              }
+              p {
+                color: var(--grayscale-light, #bfbfbf);
+
+                /* Desc/Text/XS */
+                font-family: Rubik;
+                font-size: 12px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 150%; /* 18px */
+              }
+            }
+          }
+          h5 {
+            color: var(--main-on-surface, #414141);
+            font-family: Rubik-400;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 150%; /* 24px */
+            max-width: 220px;
+          }
+          img {
+            padding-left: 20px;
+          }
+          button {
+            border-radius: 4px;
+            border: 1px solid var(--main-secondary, #70c05b);
+            color: var(--main-secondary, #70c05b);
+            text-align: center;
+
+            /* Desc/Text/S */
+            font-family: Rubik-400;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 150%; /* 24px */
+            background-color: transparent;
+            width: 100%;
+            padding: 8px;
+            &:hover {
+              background-color: #f63;
+              color: #fff;
+              transition: 0.4s;
+              border-color: #f63;
+            }
+          }
+        }
+      }
     }
   }
 }
