--- a/sass/index.css
+++ b/sass/index.css
@@ -363,4 +363,251 @@ header nav .nav-items .user p {
   color: #fff;
   transition: 0.4s;
   border-color: #f63;
+}
+
+.sovn {
+  padding-top: 100px;
+}
+.sovn .sovn-content h1 {
+  color: var(--main-on-surface, #414141);
+  /* Desc/Header/M */
+  font-family: Rubik-400;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%; /* 54px */
+}
+.sovn .sovn-content .cards {
+  padding-top: 30px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.sovn .sovn-content .cards .card-1 {
+  display: flex;
+  justify-content: center;
+  border-radius: 4px;
+  background: var(--main-primary-muted, #fcd5ba);
+}
+.sovn .sovn-content .cards .card-1:hover {
+  box-shadow: 0px 8px 16px 0px rgba(202, 147, 96, 0.5);
+  transition: 0.2s;
+}
+.sovn .sovn-content .cards .card-1 .card-texts {
+  padding: 30px;
+  max-width: 258px;
+}
+.sovn .sovn-content .cards .card-1 .card-texts h1 {
+  color: var(--main-on-surface, #414141);
+  font-family: Rubik-400;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%; /* 36px */
+}
+.sovn .sovn-content .cards .card-1 .card-texts p {
+  color: var(--main-on-surface, #414141);
+  font-family: Rubik-400;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%; /* 24px */
+}
+.sovn .sovn-content .cards .card-2 {
+  display: flex;
+  border-radius: 4px;
+  background: var(--main-secondary-muted, #e5ffde);
+}
+.sovn .sovn-content .cards .card-2:hover {
+  box-shadow: 0px 8px 16px 0px rgba(155, 248, 161, 0.5);
+  transition: 0.2s;
+}
+.sovn .sovn-content .cards .card-2 .card-texts {
+  padding: 30px;
+  max-width: 280px;
+}
+.sovn .sovn-content .cards .card-2 .card-texts h1 {
+  color: var(--main-on-surface, #414141);
+  font-family: Rubik-400;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%; /* 36px */
+}
+.sovn .sovn-content .cards .card-2 .card-texts p {
+  color: var(--main-on-surface, #414141);
+  font-family: Rubik-400;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%; /* 24px */
+}
+
+.map {
+  padding-top: 100px;
+}
+.map h1 {
+  color: var(--main-on-surface, #414141);
+  font-family: Rubik-400;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%; /* 54px */
+  padding-bottom: 30px;
+}
+.map .map-buttuns {
+  padding-top: 30px;
+  display: flex;
+  gap: 20px;
+  padding-bottom: 30px;
+}
+.map .map-buttuns button {
+  border-radius: 4px;
+  background: var(--grayscale-lightest, #f3f2f1);
+  padding: 8px;
+  color: var(--grayscale-hardest, #606060);
+  text-align: center;
+  font-family: Rubik-400;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%; /* 18px */
+}
+.map .map-buttuns button:hover {
+  color: #fff;
+  background: var(--main-secondary, #70c05b);
+  transition: 0.4s;
+}
+
+.stati {
+  padding-top: 100px;
+}
+.stati .stati-content .stati-title {
+  display: flex;
+  justify-content: space-between;
+}
+.stati .stati-content .stati-title h1 {
+  color: var(--main-on-surface, #414141);
+  font-family: Rubik-400;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%; /* 54px */
+}
+.stati .stati-content .stati-title p {
+  color: var(--grayscale-hardest, #606060);
+  text-align: center;
+  font-family: Rubik-400;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%; /* 24px */
+  gap: 8px;
+  display: flex;
+  align-items: center;
+}
+.stati .stati-content .stati-cards {
+  padding-top: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+.stati .stati-content .stati-cards .card:hover {
+  box-shadow: 4px 8px 16px 0px rgba(255, 102, 51, 0.2);
+  transition: 0.3s;
+}
+.stati .stati-content .stati-cards .card .card-texts {
+  max-width: 380px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+.stati .stati-content .stati-cards .card .card-texts h6 {
+  color: var(--grayscale-hard, #8f8f8f);
+  /* Desc/Text/XS */
+  font-family: Rubik-400;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%; /* 18px */
+}
+.stati .stati-content .stati-cards .card .card-texts h1 {
+  color: var(--main-on-surface, #414141);
+  /* Desc/Header/XS */
+  font-family: Rubik-400;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%; /* 27px */
+}
+.stati .stati-content .stati-cards .card .card-texts p {
+  color: var(--main-on-surface, #414141);
+  /* Desc/Text/S */
+  font-family: Rubik-400;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%; /* 24px */
+}
+.stati .stati-content .stati-cards .card .card-texts button {
+  color: var(--main-secondary, #70c05b);
+  max-width: 130px;
+  font-family: Rubik-400;
+  font-size: 16px;
+  padding: 8px;
+  border-radius: 4px;
+  background: var(--main-secondary-muted, #e5ffde);
+}
+.stati .stati-content .stati-cards .card .card-texts button:hover {
+  background-color: #70c05b;
+  color: #fff;
+  transition: 0.3s;
+}
+
+footer {
+  padding-top: 80px;
+  height: 136px;
+  background: var(--main-bg-page, #f8f3df);
+}
+footer .foot {
+  position: relative;
+  left: 100px;
+  top: 40px;
+}
+footer .foot .s4 {
+  position: relative;
+  left: -50px;
+  top: 30px;
+}
+footer .foot .end {
+  display: flex;
+  gap: 40px;
+  position: relative;
+  margin-left: 100px;
+  top: -12px;
+}
+footer .foot .p4 {
+  color: var(--main-on-surface, #414141);
+  font-family: Rubik-400;
+}
+footer .foot .end2 {
+  display: flex;
+  gap: 20px;
+  position: relative;
+  top: -30px;
+  margin-left: 900px;
+}
+footer .foot .e3 {
+  display: flex;
+  gap: 8px;
+  position: relative;
+  top: -53px;
+  margin-left: 1110px;
+}
+footer .foot .e4 {
+  text-align: end;
+}
+footer .foot .p7 {
+  position: relative;
+  top: -4px;
 }/*# sourceMappingURL=index.css.map */
