--- a/sass/index.scss
+++ b/sass/index.scss
@@ -399,3 +399,262 @@ header {
     }
   }
 }
+
+.sovn {
+  padding-top: 100px;
+  .sovn-content {
+    h1 {
+      color: var(--main-on-surface, #414141);
+
+      /* Desc/Header/M */
+      font-family: Rubik-400;
+      font-size: 36px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 150%; /* 54px */
+    }
+    .cards {
+      padding-top: 30px;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      .card-1 {
+        display: flex;
+        justify-content: center;
+        border-radius: 4px;
+        background: var(--main-primary-muted, #fcd5ba);
+        &:hover {
+          box-shadow: 0px 8px 16px 0px rgba(202, 147, 96, 0.5);
+          transition: 0.2s;
+        }
+        .card-texts {
+          padding: 30px;
+          max-width: 258px;
+          h1 {
+            color: var(--main-on-surface, #414141);
+            font-family: Rubik-400;
+            font-size: 24px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 150%; /* 36px */
+          }
+          p {
+            color: var(--main-on-surface, #414141);
+            font-family: Rubik-400;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 150%; /* 24px */
+          }
+        }
+      }
+      .card-2 {
+        display: flex;
+        border-radius: 4px;
+        background: var(--main-secondary-muted, #e5ffde);
+        &:hover {
+          box-shadow: 0px 8px 16px 0px rgba(155, 248, 161, 0.5);
+          transition: 0.2s;
+        }
+        .card-texts {
+          padding: 30px;
+          max-width: 280px;
+          h1 {
+            color: var(--main-on-surface, #414141);
+            font-family: Rubik-400;
+            font-size: 24px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 150%; /* 36px */
+          }
+          p {
+            color: var(--main-on-surface, #414141);
+            font-family: Rubik-400;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 150%; /* 24px */
+          }
+        }
+      }
+    }
+  }
+}
+
+.map {
+  padding-top: 100px;
+  h1 {
+    color: var(--main-on-surface, #414141);
+    font-family: Rubik-400;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%; /* 54px */
+    padding-bottom: 30px;
+  }
+  .map-buttuns {
+    padding-top: 30px;
+    display: flex;
+    gap: 20px;
+    padding-bottom: 30px;
+    button {
+      border-radius: 4px;
+      background: var(--grayscale-lightest, #f3f2f1);
+      padding: 8px;
+      color: var(--grayscale-hardest, #606060);
+      text-align: center;
+
+      font-family: Rubik-400;
+      font-size: 12px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 150%; /* 18px */
+      &:hover {
+        color: #fff;
+        background: var(--main-secondary, #70c05b);
+        transition: 0.4s;
+      }
+    }
+  }
+}
+.stati {
+  padding-top: 100px;
+  .stati-content {
+    .stati-title {
+      display: flex;
+      justify-content: space-between;
+      h1 {
+        color: var(--main-on-surface, #414141);
+        font-family: Rubik-400;
+        font-size: 36px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 150%; /* 54px */
+      }
+      p {
+        color: var(--grayscale-hardest, #606060);
+        text-align: center;
+        font-family: Rubik-400;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 150%; /* 24px */
+        gap: 8px;
+        display: flex;
+        align-items: center;
+      }
+    }
+    .stati-cards {
+      padding-top: 20px;
+      display: flex;
+      justify-content: space-between;
+      .card {
+        &:hover {
+          box-shadow: 4px 8px 16px 0px rgba(255, 102, 51, 0.2);
+          transition: 0.3s;
+        }
+        .card-texts {
+          max-width: 380px;
+          padding: 10px;
+          display: flex;
+          flex-direction: column;
+          row-gap: 10px;
+          h6 {
+            color: var(--grayscale-hard, #8f8f8f);
+
+            /* Desc/Text/XS */
+            font-family: Rubik-400;
+            font-size: 12px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 150%; /* 18px */
+          }
+          h1 {
+            color: var(--main-on-surface, #414141);
+
+            /* Desc/Header/XS */
+            font-family: Rubik-400;
+            font-size: 18px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 150%; /* 27px */
+          }
+          p {
+            color: var(--main-on-surface, #414141);
+
+            /* Desc/Text/S */
+            font-family: Rubik-400;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 150%; /* 24px */
+          }
+          button {
+            color: var(--main-secondary, #70c05b);
+            max-width: 130px;
+            font-family: Rubik-400;
+            font-size: 16px;
+            padding: 8px;
+            border-radius: 4px;
+            background: var(--main-secondary-muted, #e5ffde);
+            &:hover {
+              background-color: #70c05b;
+              color: #fff;
+              transition: 0.3s;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+footer {
+  padding-top: 80px;
+  height: 136px;
+  background: var(--main-bg-page, #f8f3df);
+  .foot {
+    position: relative;
+    left: 100px;
+    top: 40px;
+    .s4 {
+      position: relative;
+      left: -50px;
+      top: 30px;
+    }
+    .end {
+      display: flex;
+      gap: 40px;
+      position: relative;
+      margin-left: 100px;
+      top: -12px;
+    }
+    .p4 {
+      color: var(--main-on-surface, #414141);
+      font-family: Rubik-400;
+    }
+    .end2 {
+      display: flex;
+      gap: 20px;
+      position: relative;
+      top: -30px;
+      margin-left: 900px;
+      //   left: 900px;
+    }
+    .e3 {
+      display: flex;
+      gap: 8px;
+      position: relative;
+      top: -53px;
+      //   left: 1110px;
+      margin-left: 1110px;
+    }
+    .e4 {
+      text-align: end;
+    }
+    .p7 {
+      position: relative;
+      top: -4px;
+    }
+  }
+}
