--- a/sass/products.css
+++ b/sass/products.css
@@ -76,10 +76,6 @@ a {
   padding: 0 20px;
 }
 
-body {
-  background: var(--main-bg-page, #fbf8ec);
-}
-
 header {
   display: flex;
   background-color: #fff;
@@ -105,7 +101,7 @@ header nav .nav-items {
   display: flex;
   gap: 30px;
 }
-header nav .nav-items button {
+header nav .nav-items a {
   display: flex;
   align-items: center;
   padding: 8px 22px;
@@ -121,12 +117,12 @@ header nav .nav-items button {
   line-height: 150%; /* 24px */
   gap: 14px;
 }
-header nav .nav-items button:hover {
+header nav .nav-items a:hover {
   background-color: transparent;
   color: #414141;
   transition: 0.3s;
 }
-header nav .nav-items button:hover svg path {
+header nav .nav-items a:hover svg path {
   fill: #414141;
 }
 header nav .nav-items label {
@@ -179,29 +175,6 @@ header nav .nav-items .user p {
   font-style: normal;
   font-weight: 400;
   line-height: 150%; /* 24px */
-}
-
-main {
-  margin-top: 40px;
-}
-
-.hero {
-  background-image: url(../assets/images/Group\ 7100.png);
-}
-.hero .hero-content {
-  display: flex;
-  align-items: center;
-  gap: 18px;
-}
-.hero .hero-content h1 {
-  color: var(--main-on-surface, #414141);
-  text-align: center;
-  /* Desc/Header/L */
-  font-family: Rubik-700;
-  font-size: 48px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 150%; /* 72px */
 }
 
 .aksiya {
@@ -368,205 +341,6 @@ main {
   border-color: #f63;
 }
 
-.sovn {
-  padding-top: 100px;
-}
-.sovn .sovn-content h1 {
-  color: var(--main-on-surface, #414141);
-  /* Desc/Header/M */
-  font-family: Rubik-400;
-  font-size: 36px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 150%; /* 54px */
-}
-.sovn .sovn-content .cards {
-  padding-top: 30px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-.sovn .sovn-content .cards .card-1 {
-  display: flex;
-  justify-content: center;
-  border-radius: 4px;
-  background: var(--main-primary-muted, #fcd5ba);
-}
-.sovn .sovn-content .cards .card-1:hover {
-  box-shadow: 0px 8px 16px 0px rgba(202, 147, 96, 0.5);
-  transition: 0.2s;
-}
-.sovn .sovn-content .cards .card-1 .card-texts {
-  padding: 30px;
-  max-width: 258px;
-}
-.sovn .sovn-content .cards .card-1 .card-texts h1 {
-  color: var(--main-on-surface, #414141);
-  font-family: Rubik-400;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 150%; /* 36px */
-}
-.sovn .sovn-content .cards .card-1 .card-texts p {
-  color: var(--main-on-surface, #414141);
-  font-family: Rubik-400;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 150%; /* 24px */
-}
-.sovn .sovn-content .cards .card-2 {
-  display: flex;
-  border-radius: 4px;
-  background: var(--main-secondary-muted, #e5ffde);
-}
-.sovn .sovn-content .cards .card-2:hover {
-  box-shadow: 0px 8px 16px 0px rgba(155, 248, 161, 0.5);
-  transition: 0.2s;
-}
-.sovn .sovn-content .cards .card-2 .card-texts {
-  padding: 30px;
-  max-width: 280px;
-}
-.sovn .sovn-content .cards .card-2 .card-texts h1 {
-  color: var(--main-on-surface, #414141);
-  font-family: Rubik-400;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 150%; /* 36px */
-}
-.sovn .sovn-content .cards .card-2 .card-texts p {
-  color: var(--main-on-surface, #414141);
-  font-family: Rubik-400;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 150%; /* 24px */
-}
-
-.map {
-  padding-top: 100px;
-}
-.map h1 {
-  color: var(--main-on-surface, #414141);
-  font-family: Rubik-400;
-  font-size: 36px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 150%; /* 54px */
-  padding-bottom: 30px;
-}
-.map .map-buttuns {
-  padding-top: 30px;
-  display: flex;
-  gap: 20px;
-  padding-bottom: 30px;
-}
-.map .map-buttuns button {
-  border-radius: 4px;
-  background: var(--grayscale-lightest, #f3f2f1);
-  padding: 8px;
-  color: var(--grayscale-hardest, #606060);
-  text-align: center;
-  font-family: Rubik-400;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 150%; /* 18px */
-}
-.map .map-buttuns button:hover {
-  color: #fff;
-  background: var(--main-secondary, #70c05b);
-  transition: 0.4s;
-}
-
-.stati {
-  padding-top: 100px;
-}
-.stati .stati-content .stati-title {
-  display: flex;
-  justify-content: space-between;
-}
-.stati .stati-content .stati-title h1 {
-  color: var(--main-on-surface, #414141);
-  font-family: Rubik-400;
-  font-size: 36px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 150%; /* 54px */
-}
-.stati .stati-content .stati-title p {
-  color: var(--grayscale-hardest, #606060);
-  text-align: center;
-  font-family: Rubik-400;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 150%; /* 24px */
-  gap: 8px;
-  display: flex;
-  align-items: center;
-}
-.stati .stati-content .stati-cards {
-  padding-top: 20px;
-  display: flex;
-  justify-content: space-between;
-}
-.stati .stati-content .stati-cards .card:hover {
-  box-shadow: 4px 8px 16px 0px rgba(255, 102, 51, 0.2);
-  transition: 0.3s;
-}
-.stati .stati-content .stati-cards .card .card-texts {
-  max-width: 380px;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  row-gap: 10px;
-}
-.stati .stati-content .stati-cards .card .card-texts h6 {
-  color: var(--grayscale-hard, #8f8f8f);
-  /* Desc/Text/XS */
-  font-family: Rubik-400;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 150%; /* 18px */
-}
-.stati .stati-content .stati-cards .card .card-texts h1 {
-  color: var(--main-on-surface, #414141);
-  /* Desc/Header/XS */
-  font-family: Rubik-400;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 150%; /* 27px */
-}
-.stati .stati-content .stati-cards .card .card-texts p {
-  color: var(--main-on-surface, #414141);
-  /* Desc/Text/S */
-  font-family: Rubik-400;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 150%; /* 24px */
-}
-.stati .stati-content .stati-cards .card .card-texts button {
-  color: var(--main-secondary, #70c05b);
-  max-width: 130px;
-  font-family: Rubik-400;
-  font-size: 16px;
-  padding: 8px;
-  border-radius: 4px;
-  background: var(--main-secondary-muted, #e5ffde);
-}
-.stati .stati-content .stati-cards .card .card-texts button:hover {
-  background-color: #70c05b;
-  color: #fff;
-  transition: 0.3s;
-}
-
 footer {
   padding-top: 80px;
   height: 136px;
@@ -575,7 +349,7 @@ footer {
 footer .foot {
   position: relative;
   left: 100px;
-  top: 40px;
+  top: 100px;
 }
 footer .foot .s4 {
   position: relative;
@@ -613,21 +387,4 @@ footer .foot .e4 {
 footer .foot .p7 {
   position: relative;
   top: -4px;
-}
-
-.mystyle {
-  width: 100%;
-  padding: 25px;
-  background-color: paleturquoise;
-  color: black;
-  font-size: 40px;
-  box-sizing: border-box;
-  font-family: sans-serif;
-  margin-top: 80px;
-  position: absolute;
-  height: 100px;
-}
-
-#myDIV .ustun-1 {
-  display: flex;
-}/*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=products.css.map */
