--- a/sass/products.scss
+++ b/sass/products.scss
@@ -89,10 +89,6 @@ a {
   padding: 0 20px;
 }
 
-body {
-  background: var(--main-bg-page, #fbf8ec);
-}
-
 header {
   display: flex;
   background-color: #fff;
@@ -120,7 +116,7 @@ header {
       display: flex;
       // justify-content: space-between;
       gap: 30px;
-      button {
+      a {
         display: flex;
         align-items: center;
         padding: 8px 22px;
@@ -199,31 +195,6 @@ header {
           line-height: 150%; /* 24px */
         }
       }
-    }
-  }
-}
-
-main {
-  margin-top: 40px;
-}
-
-.hero {
-  // margin-top: 70px;
-  background-image: url(../assets/images/Group\ 7100.png);
-  .hero-content {
-    display: flex;
-    align-items: center;
-    gap: 18px;
-    h1 {
-      color: var(--main-on-surface, #414141);
-      text-align: center;
-
-      /* Desc/Header/L */
-      font-family: Rubik-700;
-      font-size: 48px;
-      font-style: normal;
-      font-weight: 700;
-      line-height: 150%; /* 72px */
     }
   }
 }
@@ -404,215 +375,6 @@ main {
   }
 }
 
-.sovn {
-  padding-top: 100px;
-  .sovn-content {
-    h1 {
-      color: var(--main-on-surface, #414141);
-
-      /* Desc/Header/M */
-      font-family: Rubik-400;
-      font-size: 36px;
-      font-style: normal;
-      font-weight: 700;
-      line-height: 150%; /* 54px */
-    }
-    .cards {
-      padding-top: 30px;
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      .card-1 {
-        display: flex;
-        justify-content: center;
-        border-radius: 4px;
-        background: var(--main-primary-muted, #fcd5ba);
-        &:hover {
-          box-shadow: 0px 8px 16px 0px rgba(202, 147, 96, 0.5);
-          transition: 0.2s;
-        }
-        .card-texts {
-          padding: 30px;
-          max-width: 258px;
-          h1 {
-            color: var(--main-on-surface, #414141);
-            font-family: Rubik-400;
-            font-size: 24px;
-            font-style: normal;
-            font-weight: 700;
-            line-height: 150%; /* 36px */
-          }
-          p {
-            color: var(--main-on-surface, #414141);
-            font-family: Rubik-400;
-            font-size: 16px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 150%; /* 24px */
-          }
-        }
-      }
-      .card-2 {
-        display: flex;
-        border-radius: 4px;
-        background: var(--main-secondary-muted, #e5ffde);
-        &:hover {
-          box-shadow: 0px 8px 16px 0px rgba(155, 248, 161, 0.5);
-          transition: 0.2s;
-        }
-        .card-texts {
-          padding: 30px;
-          max-width: 280px;
-          h1 {
-            color: var(--main-on-surface, #414141);
-            font-family: Rubik-400;
-            font-size: 24px;
-            font-style: normal;
-            font-weight: 700;
-            line-height: 150%; /* 36px */
-          }
-          p {
-            color: var(--main-on-surface, #414141);
-            font-family: Rubik-400;
-            font-size: 16px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 150%; /* 24px */
-          }
-        }
-      }
-    }
-  }
-}
-
-.map {
-  padding-top: 100px;
-  h1 {
-    color: var(--main-on-surface, #414141);
-    font-family: Rubik-400;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 150%; /* 54px */
-    padding-bottom: 30px;
-  }
-  .map-buttuns {
-    padding-top: 30px;
-    display: flex;
-    gap: 20px;
-    padding-bottom: 30px;
-    button {
-      border-radius: 4px;
-      background: var(--grayscale-lightest, #f3f2f1);
-      padding: 8px;
-      color: var(--grayscale-hardest, #606060);
-      text-align: center;
-
-      font-family: Rubik-400;
-      font-size: 12px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 150%; /* 18px */
-      &:hover {
-        color: #fff;
-        background: var(--main-secondary, #70c05b);
-        transition: 0.4s;
-      }
-    }
-  }
-}
-.stati {
-  padding-top: 100px;
-  .stati-content {
-    .stati-title {
-      display: flex;
-      justify-content: space-between;
-      h1 {
-        color: var(--main-on-surface, #414141);
-        font-family: Rubik-400;
-        font-size: 36px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 150%; /* 54px */
-      }
-      p {
-        color: var(--grayscale-hardest, #606060);
-        text-align: center;
-        font-family: Rubik-400;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 150%; /* 24px */
-        gap: 8px;
-        display: flex;
-        align-items: center;
-      }
-    }
-    .stati-cards {
-      padding-top: 20px;
-      display: flex;
-      justify-content: space-between;
-      .card {
-        &:hover {
-          box-shadow: 4px 8px 16px 0px rgba(255, 102, 51, 0.2);
-          transition: 0.3s;
-        }
-        .card-texts {
-          max-width: 380px;
-          padding: 10px;
-          display: flex;
-          flex-direction: column;
-          row-gap: 10px;
-          h6 {
-            color: var(--grayscale-hard, #8f8f8f);
-
-            /* Desc/Text/XS */
-            font-family: Rubik-400;
-            font-size: 12px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 150%; /* 18px */
-          }
-          h1 {
-            color: var(--main-on-surface, #414141);
-
-            /* Desc/Header/XS */
-            font-family: Rubik-400;
-            font-size: 18px;
-            font-style: normal;
-            font-weight: 700;
-            line-height: 150%; /* 27px */
-          }
-          p {
-            color: var(--main-on-surface, #414141);
-
-            /* Desc/Text/S */
-            font-family: Rubik-400;
-            font-size: 16px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 150%; /* 24px */
-          }
-          button {
-            color: var(--main-secondary, #70c05b);
-            max-width: 130px;
-            font-family: Rubik-400;
-            font-size: 16px;
-            padding: 8px;
-            border-radius: 4px;
-            background: var(--main-secondary-muted, #e5ffde);
-            &:hover {
-              background-color: #70c05b;
-              color: #fff;
-              transition: 0.3s;
-            }
-          }
-        }
-      }
-    }
-  }
-}
-
 footer {
   padding-top: 80px;
   height: 136px;
@@ -620,7 +382,7 @@ footer {
   .foot {
     position: relative;
     left: 100px;
-    top: 40px;
+    top: 100px;
     .s4 {
       position: relative;
       left: -50px;
@@ -660,24 +422,5 @@ footer {
       position: relative;
       top: -4px;
     }
-  }
-}
-
-.mystyle {
-  width: 100%;
-  padding: 25px;
-  background-color: paleturquoise;
-  color: black;
-  font-size: 40px;
-  box-sizing: border-box;
-  font-family: sans-serif;
-  margin-top: 80px;
-  position: absolute;
-  height: 100px;
-}
-
-#myDIV {
-  .ustun-1 {
-    display: flex;
   }
 }
