--- a/sass/index.css
+++ b/sass/index.css
@@ -105,7 +105,7 @@ header nav .nav-items {
   display: flex;
   gap: 30px;
 }
-header nav .nav-items button {
+header nav .nav-items .nav-btn {
   display: flex;
   align-items: center;
   padding: 8px 22px;
@@ -121,12 +121,12 @@ header nav .nav-items button {
   line-height: 150%; /* 24px */
   gap: 14px;
 }
-header nav .nav-items button:hover {
+header nav .nav-items .nav-btn:hover {
   background-color: transparent;
   color: #414141;
   transition: 0.3s;
 }
-header nav .nav-items button:hover svg path {
+header nav .nav-items .nav-btn:hover svg path {
   fill: #414141;
 }
 header nav .nav-items label {
@@ -568,51 +568,44 @@ main {
 }
 
 footer {
-  padding-top: 80px;
-  height: 136px;
-  background: var(--main-bg-page, #f8f3df);
+  margin-top: 80px;
+  background-image: url(../assets/images/footer-backgraund.png);
 }
-footer .foot {
-  position: relative;
-  left: 100px;
-  top: 40px;
+footer .foot-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 28px 0px 58px 0;
 }
-footer .foot .s4 {
-  position: relative;
-  left: -50px;
-  top: 30px;
-}
-footer .foot .end {
+footer .foot-content .foot-items {
   display: flex;
   gap: 40px;
-  position: relative;
-  margin-left: 100px;
-  top: -12px;
 }
-footer .foot .p4 {
+footer .foot-content .foot-items a {
   color: var(--main-on-surface, #414141);
+  /* Desc/Text/XS */
   font-family: Rubik-400;
+  font-size: 12px;
 }
-footer .foot .end2 {
+footer .foot-content .foot__contact {
   display: flex;
-  gap: 20px;
-  position: relative;
-  top: -30px;
-  margin-left: 900px;
+  gap: 40px;
 }
-footer .foot .e3 {
+footer .foot-content .foot__contact .social__media-logos {
+  display: flex;
+  gap: 16px;
+}
+footer .foot-content .foot__contact .phone__number {
   display: flex;
   gap: 8px;
-  position: relative;
-  top: -53px;
-  margin-left: 1110px;
 }
-footer .foot .e4 {
-  text-align: end;
-}
-footer .foot .p7 {
-  position: relative;
-  top: -4px;
+footer .foot-content .foot__contact .phone__number p {
+  color: #414141;
+  font-family: Rubik-400;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%; /* 24px */
 }
 
 .mystyle {
@@ -630,4 +623,130 @@ footer .foot .p7 {
 
 #myDIV .ustun-1 {
   display: flex;
+}
+
+.modal {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(252, 213, 186, 0.8);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  animation: modalScale 0.3s linear alternate;
+  overflow: hidden;
+}
+
+.modal.open {
+  display: flex;
+}
+
+#btn-close {
+  cursor: pointer;
+  margin-left: 91%;
+  border-radius: 8px;
+  padding: 8px;
+}
+
+.modal-content {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  width: 420px;
+  height: 434px;
+  flex-direction: column;
+  gap: 32px;
+  border-radius: 4px;
+  background: #fff;
+  box-shadow: 8px 16px 32px 0px rgba(255, 102, 51, 0.2);
+}
+
+.hash {
+  width: 260px;
+  color: #414141;
+  font-family: Rubik-400;
+  font-size: 24px;
+}
+
+.parag {
+  color: #8f8f8f;
+  font-family: Rubik-400;
+  font-size: 18px;
+  font-style: normal;
+}
+
+.inn1 {
+  display: flex;
+  outline: none;
+  width: 260px;
+  height: 60px;
+  padding: 12px 16px;
+  align-items: flex-start;
+  gap: 4px;
+  align-self: stretch;
+  border-radius: 4px;
+  border: 1px solid #70c05b;
+  background: #fff;
+  box-shadow: 4px 8px 16px 0px rgba(112, 192, 91, 0.2);
+}
+
+.vhodBUT {
+  display: flex;
+  width: 260px;
+  padding: 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border-radius: 4px;
+  background: #fcd5ba;
+  border: 1px solid #fcd5ba;
+  color: #f63;
+  text-align: center;
+  font-family: Rubik-400;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.butts1 {
+  display: flex;
+  gap: 16px;
+}
+
+.vhodBUT1 {
+  display: flex;
+  width: 121px;
+  padding: 8px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid #70c05b;
+  color: #70c05b;
+  text-align: center;
+  font-family: Rubik-400;
+  background-color: transparent;
+  font-size: 12px;
+  cursor: pointer;
+}
+
+.vhodBUT1:hover {
+  background-color: #70c05b;
+  color: #fff;
+  transition: 0.3s;
+}
+
+@keyframes modalScale {
+  from {
+    transform: scale(2);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+#btn-open {
+  background-color: transparent;
 }/*# sourceMappingURL=index.css.map */
