--- a/sass/index.scss
+++ b/sass/index.scss
@@ -120,7 +120,7 @@ header {
       display: flex;
       // justify-content: space-between;
       gap: 30px;
-      button {
+      .nav-btn {
         display: flex;
         align-items: center;
         padding: 8px 22px;
@@ -614,51 +614,43 @@ main {
 }
 
 footer {
-  padding-top: 80px;
-  height: 136px;
-  background: var(--main-bg-page, #f8f3df);
-  .foot {
-    position: relative;
-    left: 100px;
-    top: 40px;
-    .s4 {
-      position: relative;
-      left: -50px;
-      top: 30px;
-    }
-    .end {
+  margin-top: 80px;
+  background-image: url(../assets/images/footer-backgraund.png);
+  .foot-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 28px 0px 58px 0;
+    .foot-items {
       display: flex;
       gap: 40px;
-      position: relative;
-      margin-left: 100px;
-      top: -12px;
+      a {
+        color: var(--main-on-surface, #414141);
+
+        /* Desc/Text/XS */
+        font-family: Rubik-400;
+        font-size: 12px;
+      }
     }
-    .p4 {
-      color: var(--main-on-surface, #414141);
-      font-family: Rubik-400;
-    }
-    .end2 {
+    .foot__contact {
       display: flex;
-      gap: 20px;
-      position: relative;
-      top: -30px;
-      margin-left: 900px;
-      //   left: 900px;
-    }
-    .e3 {
-      display: flex;
-      gap: 8px;
-      position: relative;
-      top: -53px;
-      //   left: 1110px;
-      margin-left: 1110px;
-    }
-    .e4 {
-      text-align: end;
-    }
-    .p7 {
-      position: relative;
-      top: -4px;
+      gap: 40px;
+      .social__media-logos {
+        display: flex;
+        gap: 16px;
+      }
+      .phone__number {
+        display: flex;
+        gap: 8px;
+        p {
+          color: #414141;
+          font-family: Rubik-400;
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 150%; /* 24px */
+        }
+      }
     }
   }
 }
@@ -680,4 +672,123 @@ footer {
   .ustun-1 {
     display: flex;
   }
+}
+
+// MODAL /////////////////////
+
+.modal {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(252, 213, 186, 0.8);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  animation: modalScale 0.3s linear alternate;
+  overflow: hidden;
+}
+.modal.open {
+  display: flex;
+}
+#btn-close {
+  cursor: pointer;
+  margin-left: 91%;
+  border-radius: 8px;
+  padding: 8px;
+}
+
+.modal-content {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  width: 420px;
+  height: 434px;
+  flex-direction: column;
+  gap: 32px;
+  border-radius: 4px;
+  background: #fff;
+  box-shadow: 8px 16px 32px 0px rgba(255, 102, 51, 0.2);
+}
+.hash {
+  width: 260px;
+  color: #414141;
+  font-family: Rubik-400;
+  font-size: 24px;
+}
+.parag {
+  color: #8f8f8f;
+  font-family: Rubik-400;
+  font-size: 18px;
+  font-style: normal;
+}
+.inn1 {
+  display: flex;
+  outline: none;
+  width: 260px;
+  height: 60px;
+  padding: 12px 16px;
+  align-items: flex-start;
+  gap: 4px;
+  align-self: stretch;
+  border-radius: 4px;
+  border: 1px solid #70c05b;
+  background: #fff;
+  box-shadow: 4px 8px 16px 0px rgba(112, 192, 91, 0.2);
+}
+.vhodBUT {
+  display: flex;
+  width: 260px;
+  padding: 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border-radius: 4px;
+  background: #fcd5ba;
+  border: 1px solid #fcd5ba;
+  color: #f63;
+  text-align: center;
+  font-family: Rubik-400;
+  font-size: 24px;
+  cursor: pointer;
+}
+.butts1 {
+  display: flex;
+  gap: 16px;
+}
+.vhodBUT1 {
+  display: flex;
+  width: 121px;
+  padding: 8px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid #70c05b;
+  color: #70c05b;
+  text-align: center;
+  font-family: Rubik-400;
+  background-color: transparent;
+  font-size: 12px;
+  cursor: pointer;
+}
+.vhodBUT1:hover {
+  background-color: #70c05b;
+  color: #fff;
+  transition: 0.3s;
+}
+@keyframes modalScale {
+  from {
+    transform: scale(2);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
+#btn-open {
+  background-color: transparent;
 }
